--- a/190315/190315Lotto.html
+++ b/190315/190315Lotto.html
@@ -5,7 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Page Title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            media="screen"
+            href="190315Lotto.css"
+        />
     </head>
     <body>
         <!-- 
@@ -19,6 +24,6 @@
         4) 지정된 게임 수만큼 뽑고, 비용을 함께 출력한다.
      -->
 
-        <script src="190315.js"></script>
+        <script src="190315Lotto.js"></script>
     </body>
 </html>
