--- a/190315/190315Lotto.html
+++ b/190315/190315Lotto.html
@@ -7,12 +7,55 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link
             rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
             type="text/css"
             media="screen"
             href="190315Lotto.css"
         />
     </head>
     <body>
+        <div id="warp">
+            <div class="jumbotron">
+                <h1 class="display-4">Lotto Picker</h1>
+                <p class="lead">
+                    아래의 버튼을 누르시고 번호를 받으세요.
+                </p>
+                <hr class="my-4" />
+                <p class="pickerBtn">
+                    <span>
+                        <div class="gameForm" >
+                        <input
+                            type="text"
+                            name="gameCount"
+                            id="gameCount"
+                            placeholder="몇 게임을 하시겠습니까?? 최소 1 게임 이상 또는 5게임 이하로 입력해야 합니다."
+                        />
+                        <p>
+                            <button onclick="input()"
+                                type="submit"
+                                class="btn btn-primary btn-lg inputBtn"
+                            >
+                                번호 받기
+                            </button>
+                        </p>
+                    </span>
+                </div>
+                </p>
+            </div>
+            <div class="container">
+                    <hr>
+                    <p id="resultPage">Result</p>
+                    <ol id="pickedNumbers">
+                        
+                    </ol>
+                </div>
+            </div>
+        </div>
         <!-- 
         로또 번호는 
         1~45까지의 정수 중에서 중복되지 않는 숫자 6개를 뽑는 게임
@@ -23,7 +66,21 @@
         3)로또 번호를 지정된 게임 수만큼 뽑게 해준다.
         4) 지정된 게임 수만큼 뽑고, 비용을 함께 출력한다.
      -->
-
-        <script src="190315Lotto.js"></script>
+        <script
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"
+        ></script>
+        <script src="190315LottoPicker.js"></script>
     </body>
 </html>
