--- a/190315/190315Lotto.html
+++ b/190315/190315Lotto.html
@@ -53,6 +53,7 @@
                     <ol id="pickedNumbers">
                         
                     </ol>
+                    <p id="totalCost"></p>
                 </div>
             </div>
         </div>
