--- a/190317/190317-basketball.html
+++ b/190317/190317-basketball.html
@@ -30,6 +30,18 @@
                 <div id="text">컴퓨터부터 시작합니다!</div>
             </div>
         </div>
+
+        <div class="div-control-panel">
+            <div id="div-computer" class="div-panel">
+                <div class="div-contral-name">컴퓨터</div>
+                <button>슛하기</button>
+            </div>
+            <div id="div-user" class="div-panel">
+                <div class="div-control-name">사용자</div>
+                <button>2점슛</button>
+                <button>3점슛</button>
+            </div>
+        </div>
         <script src="190317-basketball.js"></script>
     </body>
 </html>
