finish basketball game

--- a/190317/190317-basketball.html
+++ b/190317/190317-basketball.html
@@ -21,11 +21,11 @@
                 </div>
                 <div class="div-score">
                     <div class="div-score-name">컴퓨터</div>
-                    <div id="computer-scour" class="div-score-number">0</div>
+                    <div id="computer-score" class="div-score-number">0</div>
                 </div>
                 <div class="div-score">
                     <div class="div-score-name">사용자</div>
-                    <div id="user-scour" class="div-score-number">0</div>
+                    <div id="user-score" class="div-score-number">0</div>
                 </div>
                 <div id="text">컴퓨터부터 시작합니다!</div>
             </div>
@@ -33,15 +33,18 @@
 
         <div class="div-control-panel">
             <div id="div-computer" class="div-panel">
-                <div class="div-contral-name">컴퓨터</div>
-                <button>슛하기</button>
+                <div class="div-control-name">컴퓨터</div>
+                <button class="btn-computer" onclick="onComputerShoot()">
+                    슛하기
+                </button>
             </div>
             <div id="div-user" class="div-panel">
                 <div class="div-control-name">사용자</div>
-                <button>2점슛</button>
-                <button>3점슛</button>
+                <button class="btn-user" onclick="onUserShoot(2)">2점슛</button>
+                <button class="btn-user" onclick="onUserShoot(3)">3점슛</button>
             </div>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="190317-basketball.js"></script>
     </body>
 </html>
