--- a/190320 ~ my-trip-advisor/my-trip-advisor/index.html
+++ b/190320 ~ my-trip-advisor/my-trip-advisor/index.html
@@ -24,7 +24,34 @@
                     </div>
                 </div>
             </div>
-            <div id="body"></div>
+            <div id="body">
+                <div id="title-text" class="lg-text">어디로 떠나볼까요?</div>
+                <div id="title-sub-text" class="md-text">
+                    Where do you want to go?
+                </div>
+                <div id="search-panel">
+                    <form action="" id="form-search">
+                        <div class="panel-block">
+                            <label for="from">일정이 언제에요?</label>
+                            <div>
+                                <input type="text" id="from" readonly />
+                            </div>
+                        </div>
+                        <div class="panel-block">
+                            <label for="to">언제까지에요?</label>
+                            <div>
+                                <input type="text" id="to" readonly />
+                            </div>
+                        </div>
+                        <div class="panel-block no-margin">
+                            <button type="submit" class="btn-search">
+                                <img src="images/icon_search_on.png" alt="" />
+                                검색
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
         <script src="libs/jquery-3.3.1.min.js"></script>
         <script src="scripts/main.js"></script>
