--- a/190320 ~ my-trip-advisor/my-trip-advisor/index.html
+++ b/190320 ~ my-trip-advisor/my-trip-advisor/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Page Title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="libs/jquery-ui/jquery-ui.min.css" />
         <link
             rel="stylesheet"
             type="text/css"
@@ -51,9 +52,23 @@
                         </div>
                     </form>
                 </div>
+                <div id="list-bg">
+                    <div id="list-panel"></div>
+                </div>
+            </div>
+            <div id="list-item-template" class="list-item">
+                <img src="" alt="" class="list-item-image" />
+                <div lang="list-item-desc">
+                    <div class="list-item-name"></div>
+                    <div class="list-item-city">
+                        <img src="images/icon_list_location.png" alt="" />
+                        <div class="list-item-city-name"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <script src="libs/jquery-3.3.1.min.js"></script>
+        <script src="libs/jquery-ui/jquery-ui.min.js"></script>
         <script src="scripts/main.js"></script>
     </body>
 </html>
