--- a/190322/index.html
+++ b/190322/index.html
@@ -84,7 +84,7 @@
             </div>
             <div id="body-1">
                 <p>필수 표기정보</p>
-                <table border="1">
+                <table>
                     <colgroup>
                         <col width="15%" />
                         <col width="34%" />
@@ -93,45 +93,45 @@
                     </colgroup>
 
                     <tr class="showHide">
-                        <td>품명 및 모델명</td>
+                        <td class="tableColor">품명 및 모델명</td>
                         <td>HELIOS 15 Z</td>
-                        <td>KC 인증 필 유무</td>
+                        <td class="tableColor">KC 인증 필 유무</td>
                         <td>
                             본품 : YU10816-18004, R-R-QK3-HELIOS15Z / 어댑터 :
                             HU10436-17130, MSIP-REM-CIY-A15-150P1A
                         </td>
                     </tr>
                     <tr class="showHide">
-                        <td>정격전압, 소비전력</td>
+                        <td class="tableColor">정격전압, 소비전력</td>
                         <td>220V/46.74W</td>
-                        <td>에너지소비효율등급</td>
+                        <td class="tableColor">에너지소비효율등급</td>
                         <td>해당없음</td>
                     </tr>
                     <tr class="showHide">
-                        <td>출시년월</td>
+                        <td class="tableColor">출시년월</td>
                         <td>2018년 10월</td>
-                        <td>제조자(수입자)</td>
+                        <td class="tableColor">제조자(수입자)</td>
                         <td>TONGFANG HONGKONG (SUZHOU) LIMITED / JDL TECH</td>
                     </tr>
                     <tr class="showHide">
-                        <td>제조국</td>
+                        <td class="tableColor">제조국</td>
                         <td>중국</td>
-                        <td>크기</td>
+                        <td class="tableColor">크기</td>
                         <td>컨텐츠 참조</td>
                     </tr>
                     <tr class="showHide">
-                        <td>무게</td>
+                        <td class="tableColor">무게</td>
                         <td>컨텐츠 참조</td>
-                        <td>주요 사양</td>
+                        <td class="tableColor">주요 사양</td>
                         <td>컨텐츠 참조</td>
                     </tr>
                     <tr class="showHide">
-                        <td>품질보증기준</td>
+                        <td class="tableColor">품질보증기준</td>
                         <td>
                             제품 이상 시 공정거래위원회 고시
                             소비자분쟁해결기준에 의거 보상합니다.
                         </td>
-                        <td>A/S 책임자와 전화번호</td>
+                        <td class="tableColor">A/S 책임자와 전화번호</td>
                         <td>쿠팡 고객센터 1577-7011</td>
                     </tr>
                 </table>
