product detail fold
add feat hide part of product detail picture and show all

--- a/190322/index.html
+++ b/190322/index.html
@@ -150,12 +150,17 @@
                     alt=""
                 />
             </div>
-            <div class="body-1-2-Image productImg">
+            <div id="removeBody-1-2-Image" class="body-1-2-Image productImg">
                 <img
                     src="//thumbnail15.coupangcdn.com/thumbnails/remote/q89/image/retail/images/2018/11/26/14/7/8e4172c2-7f4b-42c7-88d9-e249d4b5b4b9.jpg"
                     alt=""
                 />
-                <button type="button" class="btn btn-outline-primary">
+            </div>
+            <div id="MoreDetailBtn">
+                <button
+                    type="button"
+                    class="btn btn-outline-primary moreDetailButton"
+                >
                     상품정보 더보기
                 </button>
             </div>
