change menu bar

--- a/190323/index.html
+++ b/190323/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="container body">
             <div class="menuBar">
-                <ul class="nav nav-tabs">
+                <ul class="nav justify-content-center">
                     <li class="nav-item">
                         <a class="nav-link active" href="#body-1">상품상세</a>
                     </li>
