basic structure and functions

--- a/190323/index.html
+++ b/190323/index.html
@@ -77,10 +77,10 @@
                         <a class="nav-link" href="#rate">상품평</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">상품문의</a>
+                        <a class="nav-link" href="#inquiry">상품문의</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">배송/교환/반품 안내</a>
+                        <a class="nav-link" href="#delivery">배송/교환/반품 안내</a>
                     </li>
                 </ul>
             </div>
@@ -172,16 +172,79 @@
                 </div>
                 <div></div>
             </div>
-            <div class="dummy">dummy</div>
-            <div class="dummy">dummy</div>
-            <div class="dummy">dummy</div>
-            <div class="dummy">dummy</div>
-            <div class="dummy">dummy</div>
-            <div class="dummy">dummy</div>
-            <div class="dummy">dummy</div>
-            <div class="dummy">dummy</div>
-            <div class="dummy">dummy</div>
-            <div class="dummy">dummy</div>
+            <hr />
+            <div id="inquiry" class="container boarderBox">
+                <p>
+                    <span>상품문의</span
+                    ><span class="rightAlign"
+                        ><button type="button" class="btn btn-outline-primary">
+                            문의하기
+                        </button></span
+                    >
+                </p>
+                <p>
+                    <ul>
+                        <li>구매한 상품의 취소/반품은 마이쿠팡 구매내역에서 신청 가능합니다.</li>
+                        <li>상품문의 및 후기게시판을 통해 취소나 환불, 반품 등은 처리되지 않습니다.</li>
+                        <li>가격, 판매자, 교환/환불 및 배송 등 해당 상품 자체와 관련 없는 문의는 고객센터 내 1:1 문의하기를 이용해주세요.</li>
+                        <li>"해당 상품 자체"와 관계없는 글, 양도, 광고성, 욕설, 비방, 도배 등의 글은 예고 없이 이동, 노출제한, 삭제 등의 조치가 취해질 수 있습니다.</li>
+                        <li>공개 게시판이므로 전화번호, 메일 주소 등 고객님의 소중한 개인정보는 절대 남기지 말아주세요.</li>
+                    </ul>
+                </p>
+                <hr>
+                <div class="inquiryText">등록된 문의가 없습니다.</div>
+                <hr>
+                <div class="inquiryTextSub">
+                    <span>판매 부적격 상품 또는 허위과장광고 및 지적재산권을 침해하는 상품의 경우 신고하여 주시기 바랍니다.</span>
+                    <span class="rightAlign"><button type="button" class="btn btn-outline-info">신고하기</button></span>
+                </div>
+            </div>
+
+            <div id="delivery" class="container">
+                <p>배송정보</p>
+                <div class="deliveryTables">
+                    <table>
+                            <colgroup>
+                                <col width="15%" />
+                                <col width="34%" />
+                                <col width="15%" />
+                                <col width="*" />
+                            </colgroup>
+                        <tr>
+                            <td class="tableColor">배송방법</td>
+                            <td>순차배송</td>
+                            <td rowspan="2" class="tableColor">배송비</td>
+                            <td rowspan="2">무료배송 <br>- 로켓배송 상품 중 19,800원 이상 구매 시 무료배송<br>- 도서산간 지역 추가비용 없음</td>
+                        </tr>
+                        <tr>
+                            <td class="tableColor">묶음배송 여부</td>
+                            <td>가능</td>
+                        </tr>
+                        <tr>
+                            <td class="tableColor">배송기간</td>
+                            <td colspan="3">ㆍ쿠팡맨 배송 지역 : 주문 및 결제 완료 후, 1-2일 이내 도착<br>ㆍ쿠팡맨 미배송 지역 : 주문 및 결제 완료 후, 2-3일 이내 도착<br>- 도서 산간 지역 등은 하루가 더 소요될 수 있습니다. 곧 고객님께도 쿠팡맨이 찾아갈 수 있도록 노력하겠습니다<br>ㆍ천재지변, 물량 수급 변동 등 예외적인 사유 발생 시, 다소 지연될 수 있는 점 양해 부탁드립니다.</td>
+                        </tr>
+                    </table>
+                </div>
+                <p>교환/반품 안내</p>
+                <div class="deliveryTables">
+                    <table>
+                        <colgroup>
+                            <col width="15%" />
+                            <col width="*" />
+                        </colgroup>
+                        <tr>
+                            <td class="tableColor">교환/반품 비용</td>
+                            <td>5,000원<br>- 단, 고객 변심의 경우에만 발생<br>- 부분반품 시, 남은금액이 무료배송 조건을 유지하면 일부 반품비용이 부과</td>
+                        </tr>
+                        <tr>
+                            <td class="tableColor">교환/반품 신청 기준일</td>
+                            <td>ㆍ단순변심에 의한 로켓배송 상품의 교환/반품은 제품 수령 후 30일 이내까지만 가능 (교환/반품비용 고객부담)<br>ㆍ상품의 내용이 표시·광고의 내용과 다른 경우에는 상품을 수령한 날부터 3개월 이내, 그 사실을 안 날 또는 알 수 있었던 날부터
+                                30일 이내에 청약철회 가능</td>
+                        </tr>
+                    </table>
+            </div>
+            
         </div>
         <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
